fix z-index nav

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,5 @@
 // --> Init fonts
 /*! Generated by Font Squirrel (https://www.fontsquirrel.com) on January 30, 2021 */
-
 @font-face {
     font-family: 'montserratmedium';
     src: url('../fonts/Montserrat/montserrat-medium-webfont.woff') format('woff');
@@ -158,6 +157,17 @@ h2{
     @extend %medium-font;
 }
 
+span h3{
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    font-size: 1.6em;
+}
+
+span h4{
+    text-transform: uppercase;
+    font-size: 1em;
+}
+
 li{ list-style-type: none; }
 
 a{ 
@@ -168,6 +178,85 @@ a{
 #home{
     position: relative;
     overflow: hidden;
+    #menu{
+        width: 100%;
+        height: 100vh;
+        background-color: black;
+        position: absolute;
+        z-index: 10000;
+        display: none; //display none by default
+        .title{
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+            span{
+                display: block;
+                cursor: pointer;
+                h3{
+                    opacity: 0;
+                    animation: appear 0.4s ease;
+                    animation-fill-mode: forwards;
+                    animation-delay: 0.6s;
+                }
+                h4{
+                    opacity: 0;
+                    animation: appear2 0.4s ease;
+                    animation-fill-mode: forwards;
+                    animation-delay: 0.8s;
+                }
+                &:first-child{
+                    position: relative;
+                    top: 20px;
+                }
+                &:last-child{
+                    position: relative;
+                    bottom: 15px;
+                    &::before{
+                        animation: barAnimXS 0.4s ease-in-out;
+                        animation-fill-mode: forwards;
+                        animation-delay: 1s;
+                        content: "";
+                        position: absolute;
+                        width: 0px;
+                        height: 2px;
+                        left: 100px;
+                        top: 32px;
+                        background-color: $secondary;
+                    }
+                    &::after{
+                        animation: barAnimXS 0.4s ease-in-out;
+                        animation-fill-mode: forwards;
+                        animation-delay: 1s;
+                        content: "";
+                        position: absolute;
+                        width: 0px;
+                        height: 2px;
+                        right: 100px;
+                        top: 32px;
+                        background-color: $secondary;
+                    }
+                }
+            }
+        }
+        .menu-list{
+            display: flex;
+            justify-content: center;
+            ul{
+                padding: 0 50px;
+                li:not(li:first-child){
+                    opacity: 0.6;
+                    margin-top: 15px;
+                    font-size: 1em;
+                    transition: opacity 0.2s ease;
+                    &:hover{
+                        opacity: 1;
+                        transition: opacity 0.2s ease;
+                    }
+                }
+            }
+        }
+    }
     #indicator-slider{
         height: 4px;
         background: rgb(2,0,36);
@@ -177,6 +266,17 @@ a{
         border-radius: 5px;
         z-index: 3000;
     }
+}
+
+.title-list{
+    font-size: 1.4em;
+    margin-bottom: 20px;
+    opacity: 0.9;
+}
+
+.active-menu{
+    display: block !important;
+    z-index: 10000 !important;
 }
 
 .active{
@@ -221,7 +321,6 @@ a{
     flex-direction: column;
     justify-content: space-between;
     height: 100vh;
-    // background-color: lightblue;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -235,39 +334,38 @@ a{
                 margin-right: 15vw;
                 position: relative;
                 padding: 0;
-                li{
-                    cursor: pointer;
-                    position: relative;
-                    @extend %medium-btn;
-                    &::after{
-                        content: '';
-                        pointer-events: none;
-                        position: absolute;
-                        width: 20%;
-                        height: 100%;
-                        left: 0;
-                        top: 0;
-                        opacity: 0;
-                        border-radius: 25px;
-                        background-color: $secondary;
-                        transition: all 0.2s ease;
-                    }
-                    &:last-child{
-                        margin-left: 20px;
-                    }
-                    &:hover{
+                a{
+                    li{
+                        cursor: pointer;
+                        position: relative;
+                        @extend %medium-btn;
                         &::after{
-                            opacity: 1;
-                            width: 100%;
+                            content: '';
+                            pointer-events: none;
+                            position: absolute;
+                            z-index: -100;
+                            width: 20%;
                             height: 100%;
+                            left: 0;
+                            top: 0;
+                            opacity: 0;
+                            border-radius: 25px;
+                            background-color: $secondary;
                             transition: all 0.2s ease;
                         }
+                        &:last-child{
+                            margin-left: 20px;
+                        }
+                        &:hover{
+                            &::after{
+                                opacity: 1;
+                                width: 100%;
+                                height: 100%;
+                                transition: all 0.2s ease;
+                            }
+                        }
                     }
-                    a{
-                        position: relative;
-                        z-index: 100;
-                    }
-                }
+                }            
             }
         }
     }
